# automata-safa-capnp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  Setup.hs  afapipe.cabal  automata-safa-capnp.cabal  build.rs  pom.xml  setup.py  test.py
schema/: Afa.capnp  CnfAfa.capnp  CnfAfaRpc.capnp  DummyModelCheckerRpc.capnp  Lib.capnp  LoadedModelRpc.capnp  MultisolverRpc.capnp  SeparatedAfa.capnp  SeparatedAfaRpc.capnp  __init__.py  afa.capnp
schema/Afa/Model/: CnfAfa.capnp  Separated.capnp  Succinct.capnp  Term.capnp
schema/Afa/Rpc/: ModelChecker.capnp  ModelCheckers.capnp
src/: dummy_model_checker.c++  dummy_model_checker_client.c++  file-solver.c++  lib.rs  list-builder.c++  multisolver.c++
src/afapipe/gen_little/: gen.h
src/cpp/afapipe/gen_little/: gen.cpp  store.cpp
src/hs/Afa/: FileIO.hs  PrettyFileIO.hs  ToDot.hs
