[package]
name = "afapipe"
version = "0.1.0"
authors = ["Pavol Vargovcik <pavol.vargovcik@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capnp = "0.14.2"

[build-dependencies]
capnpc = "0.14.4"
