cabal-version:       3.0
name:                automata-safa-capnp
version:             0.1.0.0
synopsis:            capnp schema for symbolic alternating finite automata
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Pavol Vargovcik
maintainer:          pavol.vargovcik@gmail.com
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md,
  README.md,

  schema/Afa/Model/Succinct.capnp,
  schema/Afa/Model/Term.capnp,
  schema/Afa/Model/CnfAfa.capnp,
  schema/Afa/Model/Separated.capnp,

  schema/Afa/Rpc/ModelChecker.capnp,
  schema/Afa/Rpc/ModelCheckers.capnp,
build-type: Custom

library
  exposed-modules:
    Capnp.Gen.ById.Xd4c5f198b0c1c530
    Capnp.Gen.ById.Xd4c5f198b0c1c530.Pure
    Capnp.Gen.Afa.Model.Term
    Capnp.Gen.Afa.Model.Term.Pure

    Capnp.Gen.ById.Xf7c01c6f70140b00
    Capnp.Gen.ById.Xf7c01c6f70140b00.Pure
    Capnp.Gen.Afa.Model.Succinct
    Capnp.Gen.Afa.Model.Succinct.Pure

    Capnp.Gen.ById.Xe38d81482dce6081
    Capnp.Gen.ById.Xe38d81482dce6081.Pure
    Capnp.Gen.Afa.Model.CnfAfa
    Capnp.Gen.Afa.Model.CnfAfa.Pure

    Capnp.Gen.ById.X9478efb7d68e5dd0
    Capnp.Gen.ById.X9478efb7d68e5dd0.Pure
    Capnp.Gen.Afa.Model.Separated
    Capnp.Gen.Afa.Model.Separated.Pure

    Capnp.Gen.ById.X98bb6d0a600d783c
    Capnp.Gen.ById.X98bb6d0a600d783c.Pure
    Capnp.Gen.Afa.Rpc.ModelChecker
    Capnp.Gen.Afa.Rpc.ModelChecker.Pure

    Capnp.Gen.ById.Xe7bb0c034c4bcfab
    Capnp.Gen.ById.Xe7bb0c034c4bcfab.Pure
    Capnp.Gen.Afa.Rpc.ModelCheckers
    Capnp.Gen.Afa.Rpc.ModelCheckers.Pure
  autogen-modules:
    Capnp.Gen.ById.Xd4c5f198b0c1c530
    Capnp.Gen.ById.Xd4c5f198b0c1c530.Pure
    Capnp.Gen.Afa.Model.Term
    Capnp.Gen.Afa.Model.Term.Pure

    Capnp.Gen.ById.Xf7c01c6f70140b00
    Capnp.Gen.ById.Xf7c01c6f70140b00.Pure
    Capnp.Gen.Afa.Model.Succinct
    Capnp.Gen.Afa.Model.Succinct.Pure

    Capnp.Gen.ById.Xe38d81482dce6081
    Capnp.Gen.ById.Xe38d81482dce6081.Pure
    Capnp.Gen.Afa.Model.CnfAfa
    Capnp.Gen.Afa.Model.CnfAfa.Pure

    Capnp.Gen.ById.X9478efb7d68e5dd0
    Capnp.Gen.ById.X9478efb7d68e5dd0.Pure
    Capnp.Gen.Afa.Model.Separated
    Capnp.Gen.Afa.Model.Separated.Pure

    Capnp.Gen.ById.X98bb6d0a600d783c
    Capnp.Gen.ById.X98bb6d0a600d783c.Pure
    Capnp.Gen.Afa.Rpc.ModelChecker
    Capnp.Gen.Afa.Rpc.ModelChecker.Pure

    Capnp.Gen.ById.Xe7bb0c034c4bcfab
    Capnp.Gen.ById.Xe7bb0c034c4bcfab.Pure
    Capnp.Gen.Afa.Rpc.ModelCheckers
    Capnp.Gen.Afa.Rpc.ModelCheckers.Pure
  build-tool-depends:
    capnp:capnpc-haskell ^>= 0.10.0.0,
  build-depends:
    base >=4.13.0.0 && <4.15,
    capnp ^>=0.10.0.0,
  default-language:    Haskell2010

custom-setup
  setup-depends:
    Cabal ^>=3.2.0,
    base >=4.13.0.0 && <4.15,
    process ^>=1.6.8.0,
    directory ^>=1.3.6.0,
